# PyLandscape

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py  train.py
.github/workflow/: release.yml
.github/workflows/: release.yml
benchmarks/: __init__.py  bit_flip.py  jacobian.py  lipschitz.py  noise.py  noisy_dataset.py
config/econ/: baseline.yml
datamodule/: __init__.py  autoencoder_datamodule.py  fusion_datamodule.py  vision_datamodule.py
datamodule/telescope_loss/: __init__.py  utils_pt.py
models/: __init__.py  autoencoder.py  fusion_control.py  image_classification.py  telescope_pt.py  utils.py
models/quantization/: __init__.py  quantization.py  strategy.py
notebooks/: __init__.py  cka_similarity.ipynb  hessian.ipynb  input_perturbation.ipynb  mode_connectivity.ipynb  parameter_perturbation.ipynb  plotting_utility.py  tutorial.ipynb
pylandscape/: cka.py  metric.py  mode_connectivity.py  surface.py
pylandscape/mc_utils/: __init__.py  curve_converter.py  curve_net.py  train_curve.py
scripts/: test.sh  train.sh
