[tool.poetry]
name = "pylandscape"
version = "0.0.0"
description = "Python package to explore the loss landscape of Machine Learning models"
authors = ["Tommaso Baldi <tommaso.baldi@santannapisa.it>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/balditommaso/PyLandscape"
repository = "https://github.com/balditommaso/PyLandscape"
packages = [
    { include = "pylandscape" },
    { include = "pylandscape/mc_utils" }
]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "*"
numpy = "*"
pandas = "*"
scipy = "*"
tqdm = "*"
PyHessian = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
